# mvbuild

./: CMakeLists.txt  README.md  pch.h
app/: CMakeLists.txt
app/src/: main.cpp  pch.h
pkg/int/: CMakeLists.txt
pkg/int/cmd/: CMakeLists.txt  parse.cpp
pkg/int/impl/: CMakeLists.txt
pkg/int/impl/cmd/: CMakeLists.txt  parse.cpp  pch.h
pkg/int/impl/cp/: CMakeLists.txt  file.cpp  pch.h
pkg/int/impl/wnd/: CMakeLists.txt  process.cpp
pkg/int/inc/cmd/: parse.h
pkg/int/inc/cp/: file.h
pkg/int/inc/wnd/: process.h
